--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -19,3 +19,12 @@
   flex-direction: column;
   padding-bottom: 10%;
 }
+
+.container{
+  display: flex;
+}
+
+.others{
+  flex:4;
+  background-color: green;
+}
