--- a/react-frontend/src/components/sidebar/sidebar.css
+++ b/react-frontend/src/components/sidebar/sidebar.css
@@ -44,7 +44,7 @@
 }
 
 .horizontalLine{
-    color: grey;
-    background-color: grey;
+    color: #555;
+    background-color: #555;
     margin-top: -15px;
 }
