--- a/react-frontend/src/components/xrayDisplay/xrayDisplay.css
+++ b/react-frontend/src/components/xrayDisplay/xrayDisplay.css
@@ -1,3 +1,37 @@
+.xrayDisplayContainer{
+    background-color: white;
+    display: flex;
+    height:100vh;
+}
+
+.verticalLine{
+    background-color: rgb(235, 235, 235);
+    width: 5px;
+    height: 100vh;
+}
+
+.imageContainer{
+    flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.uploadedImage{
+    height: 60vh;
+    position: sticky;
+    margin: 100px; /* Only used when screen is very small, otherwise has no impact */
+}
+
+
+.XRayListScroller{
+    flex:1;
+    overflow: auto;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
 
 .XRayListElement {
     background-color: rgb(235, 235, 235);
@@ -29,7 +63,7 @@
 }
 
 .imageInfosContainer{
-    margin-top: 95px; /*To be aligned with start of image*/
+    margin-top: 95px;
     display: flex;
     flex-direction: column;
     align-items: center;
