--- a/react-frontend/src/components/xrayListElement/xrayListElement.css
+++ b/react-frontend/src/components/xrayListElement/xrayListElement.css
@@ -42,14 +42,17 @@
 .patientIdText{
     flex: 1;
     font-size: 20px;
+    color: #555;
 }
 
 .followUpText{
     flex: 1;
     font-size: 20px;
+    color: #555;
 }
 
 .similarityText{
     flex: 1;
     font-size: 20px;
+    color: #555;
 }
