--- a/react-frontend/src/components/xrayListElement/xrayListElement.css
+++ b/react-frontend/src/components/xrayListElement/xrayListElement.css
@@ -3,7 +3,7 @@
     background-color: rgb(235, 235, 235);
     display: flex;
     flex-direction: row;
-    margin-bottom: 20px;
+    margin:20px;
     border-radius: 10px;
     cursor: pointer;
 }
