--- a/react-frontend/src/components/dragDropUploader/dragDropUploader.css
+++ b/react-frontend/src/components/dragDropUploader/dragDropUploader.css
@@ -13,6 +13,7 @@
 .uploaderContainer{
     margin:50px;
     background-color: rgb(245, 245, 245);
+    width: 300px;
     padding: 5px 0px 20px;
     cursor: pointer;
     display: flex;
