Cleaner code and platform

--- a/react-frontend/src/components/projectionPlot/projectionPlot.css
+++ b/react-frontend/src/components/projectionPlot/projectionPlot.css
@@ -1,6 +1,5 @@
-.projectionPlotContainer{
-    align-self: center;
+.projectionPlotContainer {
+    display: flex;
+    justify-content: center;
 }
 
-.projectionPlotSVG{
-}
