--- a/react-frontend/src/components/similarImagesListElement/similarImagesListElement.css
+++ b/react-frontend/src/components/similarImagesListElement/similarImagesListElement.css
@@ -1,10 +1,14 @@
 .similarImagesListElement {
+    flex: none;
     display: flex;
     flex-direction: row;
+    align-items: center;
     margin: 20px;
     padding: 20px;
-    border-radius: 4px;
-    border: 1px dashed grey;
+    border-radius: 15px;
+    background-color: #f5f5f5;
+    /* border: 1px dotted grey; */
+    /* box-shadow: 0 10px 15px rgb(230, 230, 230); */
 }
 
 .label {
@@ -17,13 +21,10 @@
     flex-direction: column;
 }
 
-.additionalInfoContainer {
-    display: flex;
-}
-
 .similarImage {
     object-fit: contain;
-    width: 15vw;
-    height: auto;
+    max-width: 15vw;
     flex: 2;
+    border-radius: 25px;
+    box-shadow: 0 10px 15px rgb(230, 230, 230);
 }
