--- a/react-frontend/src/components/similarImagesListElement/similarImagesListElement.css
+++ b/react-frontend/src/components/similarImagesListElement/similarImagesListElement.css
@@ -1,10 +1,10 @@
 .similarImagesListElement {
     flex: none;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin: 20px;
-    padding: 20px;
+    padding: 10px;
     border-radius: 15px;
     background-color: #f5f5f5;
     /* border: 1px dotted grey; */
@@ -13,12 +13,33 @@
 
 .label {
     text-align: center;
+    margin: 5px;
+}
+
+.infoAndGraphicsContainer {
+    display: flex;
+    flex-direction: row;
 }
 
 .infoContainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.additionalInfoContainer {
+    margin: 0 10px 0 10px;
+}
+
+.radarChartContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.radarChart {
+    padding: 10px;
+    overflow: visible;
 }
 
 .similarImage {
