--- a/react-frontend/src/components/similarImagesListElement/similarImagesListElement.css
+++ b/react-frontend/src/components/similarImagesListElement/similarImagesListElement.css
@@ -3,32 +3,90 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
-    padding: 10px;
     border-radius: 15px;
-    background-color: #f5f5f5;
-    /* border: 1px dotted grey; */
-    /* box-shadow: 0 10px 15px rgb(230, 230, 230); */
+    margin: 15px;
+    padding:10px;
+    background-color: #e7e5e5;
 }
 
 .label {
     text-align: center;
     margin: 5px;
+    margin-bottom: 10px;
 }
 
-.infoAndGraphicsContainer {
+.bodyContainer{
     display: flex;
     flex-direction: row;
+    background-color:#e7e5e5;
+    border-radius: 15px;
 }
 
-.infoContainer {
+.leftColumn{
+    flex: 2;
     display: flex;
-    justify-content: center;
     flex-direction: column;
 }
 
-.additionalInfoContainer {
-    margin: 0 10px 0 10px;
+.rightColumn{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.patientInfoContainer{
+    display: flex;
+    flex-direction: column;
+}
+
+.patientInfoRow{
+    display: flex;
+    flex-direction: row;
+    padding:2px;
+}
+
+.patientInfoTitleContainer{
+    flex: auto;
+}
+
+.patientInfoTitle{
+    display: flex;
+    font-size: 15px;
+    font-weight: normal;
+}
+
+.patientInfoValueContainer{
+    margin-right: 10px;
+    flex: auto;
+}
+.patientInfoValueText{
+    text-align: right;
+    font-size: 15px;
+    font-weight:normal;
+}
+
+.boldText{
+    display: flex;
+    font-size: 15px;
+}
+.verticalLine{
+    background-color: black;
+    width: 1px;
+}
+.horizontalLine{
+    background-color: black;
+    height: 1px;
+}
+
+.weakHorizontalLine{
+    background-color: rgb(212, 212, 212);
+    height: 1px;
+}
+
+.similarImage {
+    max-width: 13vw;
+    border-radius: 10px;
+    /* box-shadow: 0 10px 15px rgb(230, 230, 230); */
 }
 
 .radarChartContainer {
@@ -37,15 +95,18 @@
     align-items: center;
 }
 
+.radarTitle{
+    display: flex;
+    font-size: 15px;
+}
+
 .radarChart {
     padding: 10px;
     overflow: visible;
 }
 
-.similarImage {
-    object-fit: contain;
-    max-width: 15vw;
-    flex: 2;
-    border-radius: 25px;
-    box-shadow: 0 10px 15px rgb(230, 230, 230);
+.totalDistanceContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
