--- a/react-frontend/src/components/latentSpaceExplorator/latentSpaceExplorator.css
+++ b/react-frontend/src/components/latentSpaceExplorator/latentSpaceExplorator.css
@@ -55,11 +55,12 @@
 }
 
 .edit_button:hover{
-    background-color: #f1f1f1;
-    box-shadow: 0 10px 15px rgb(230, 230, 230);
+    background-color: #effbfb;
+    box-shadow: 0 4px 7px rgb(230, 230, 230);
 }
 
 .edit_button{
+    border-radius: 5px;
     cursor: pointer;
 }
 
