--- a/react-frontend/src/components/filters/filters.css
+++ b/react-frontend/src/components/filters/filters.css
@@ -18,6 +18,7 @@
     align-items: center;
     cursor: pointer;
     border-radius: 5px;
+    color: #555;
 }
 .cliquableFilterTitleContainer:hover{
     background-color: white;
@@ -40,10 +41,6 @@
     margin-left: 10px;
     margin-right: 10px;
     font-size: 20px;
-}
-
-.filterName{
-    color: #555;;
 }
 
 .diseaseSelector{
