--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,13 +1,15 @@
 .App {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .container{
   display: flex;
 }
 
-.others{
+/* .others{
   flex:4;
   background-color: white;
-}
+} */
